# PHYSBO

./: pyproject.toml
docs/sphinx/manual/en/source/api/: physbo.misc.rst
physbo/gp/cov/: gauss.py
physbo/misc/: __init__.py
physbo/misc/src/: cholupdate.py  diagAB.py  logsumexp.py  traceAB.py
