[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "physbo"
version = "1.2-dev"
description = "optimization tool for PHYSics based on Bayesian Optimization"
authors = ["PHYSBO developers <physbo-dev@issp.u-tokyo.ac.jp>"]
license = "GPL-3.0-or-later"

readme = "README.md"
repository = "https://github.com/issp-center-dev/PHYSBO"

packages = [
  { include = "physbo", from = "./" }
  ]

[tool.poetry.dependencies]
python = ">=3.6.8"
numpy = "^1.19"
scipy = "^1.5"

[tool.poetry.dev-dependencies]
tox = "^3.25.0"
pynvim = "^0.4.3"
black = "^22.3.0"
